crates/vescpkg-sys/tests/ui/test_support_requires_feature.stderr
error[E0433]: cannot find `test_support` in `vescpkg_sys`
 --> tests/ui/test_support_requires_feature.rs:2:31
  |
2 |     let _table = vescpkg_sys::test_support::empty_table();
  |                               ^^^^^^^^^^^^ could not find `test_support` in `vescpkg_sys`
  |
note: found an item that was configured out
 --> src/lib.rs
  |
  | #[cfg(test)]
  |       ---- the item is gated here
  | pub mod test_support;
  |         ^^^^^^^^^^^^
