crates/vescpkg-sys/tests/ui/test_support_requires_feature.rs
fn main() {
    let _table = vescpkg_sys::test_support::empty_table();
}
